# invofi-contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  lib.rs  test.rs
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml  clippy.yml
invofi-core/: Cargo.toml
invofi-core/src/: financing.rs  invoice.rs  lib.rs  storage.rs
scripts/: check-size.sh  deploy.sh  fund-and-deploy.sh
src/: lib.rs  test.rs
