[package]
name = "invofi-invoice-registry"
version = "0.1.0"
edition = "2021"
description = "Soroban contract for InvoFi invoice registry"
license = "MIT"

[workspace]
members = [
    "invofi-core",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
arbitrary = "=1.3.2"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true